[gd_scene load_steps=7 format=2]

[ext_resource path="res://scripts/enemy_1_modified.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 33.3941, 32.4661 )

[sub_resource type="CircleShape2D" id=2]

custom_solver_bias = 0.0
radius = 301.037

[sub_resource type="RectangleShape2D" id=3]

custom_solver_bias = 0.0
extents = Vector2( 36.724, 35.8165 )

[sub_resource type="Animation" id=4]

resource_name = "zig_zag"
length = 4.0
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("enemy_1_modified_sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2, 3, 4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 50, 0 ), Vector2( 0, 0 ), Vector2( -50, 0 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("enemy_1_modified_collision:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1, 2, 3, 4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 50, 0 ), Vector2( 0, 0 ), Vector2( -50, 0 ), Vector2( 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("enemy_1_modified_FOV:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1, 2, 3, 4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 50, 0 ), Vector2( 0, 0 ), Vector2( -50, 0 ), Vector2( 0, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("enemy_1_modified_FOV/enemy_1_modified_FOV_collision:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1, 2, 3, 4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -0.540359 ), Vector2( 50, -0.540359 ), Vector2( 0, -0.540359 ), Vector2( -50, -0.540359 ), Vector2( 0, -0.540359 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("enemy_1_modified_hit:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 1, 2, 3, 4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 50, 0 ), Vector2( 0, 0 ), Vector2( -50, 0 ), Vector2( 0, 0 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("enemy_1_modified_hit/enemy_1_modified_hit_collision:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 1, 2, 3, 4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 0 ), Vector2( 0, 0 ), Vector2( 0, 0 ), Vector2( 0, 0 ) ]
}

[node name="enemy_1_modified" type="KinematicBody2D"]

input_pickable = false
collision_layer = 8
collision_mask = 238
collision/safe_margin = 0.08
script = ExtResource( 1 )
_sections_unfolded = [ "Collision", "Pickable", "Transform" ]

[node name="enemy_1_modified_sprite" type="Sprite" parent="." index="0"]

modulate = Color( 0.5, 0, 0, 1 )
rotation = 4.71239
texture = ExtResource( 2 )
_sections_unfolded = [ "Offset", "Transform", "Visibility" ]

[node name="enemy_1_modified_collision" type="CollisionShape2D" parent="." index="1"]

rotation = 4.71239
shape = SubResource( 1 )
_sections_unfolded = [ "Material", "Transform", "Visibility" ]

[node name="enemy_1_modified_FOV" type="Area2D" parent="." index="2"]

rotation = 4.71239
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision_layer = 238
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Collision", "Transform" ]

[node name="enemy_1_modified_FOV_collision" type="CollisionShape2D" parent="enemy_1_modified_FOV" index="0"]

position = Vector2( 0.323532, -3.12402e-007 )
rotation = 4.71239
shape = SubResource( 2 )
_sections_unfolded = [ "Transform" ]

[node name="enemy_1_modified_hit" type="Area2D" parent="." index="3"]

rotation = 4.71239
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision_mask = 238
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Audio Bus", "Collision", "Transform" ]

[node name="enemy_1_modified_hit_collision" type="CollisionShape2D" parent="enemy_1_modified_hit" index="0"]

rotation = 4.71239
shape = SubResource( 3 )
_sections_unfolded = [ "Transform", "Z Index" ]

[node name="animation_walk" type="AnimationPlayer" parent="." index="4"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/zig_zag = SubResource( 4 )
blend_times = [  ]

[node name="raycast_down" type="RayCast2D" parent="." index="5"]

enabled = true
exclude_parent = true
cast_to = Vector2( 0, 60 )
collision_mask = 70

[node name="raycast_up" type="RayCast2D" parent="." index="6"]

enabled = true
exclude_parent = true
cast_to = Vector2( 0, -60 )
collision_mask = 70

[node name="raycast_left" type="RayCast2D" parent="." index="7"]

enabled = true
exclude_parent = true
cast_to = Vector2( -60, 0 )
collision_mask = 70

[node name="raycast_right" type="RayCast2D" parent="." index="8"]

enabled = true
exclude_parent = true
cast_to = Vector2( 60, 0 )
collision_mask = 70
_sections_unfolded = [ "Material", "Transform", "Visibility", "Z Index" ]

[connection signal="body_entered" from="enemy_1_modified_FOV" to="." method="_on_enemy_1_modified_FOV_body_entered"]

[connection signal="body_exited" from="enemy_1_modified_FOV" to="." method="_on_enemy_1_modified_FOV_body_exited"]

[connection signal="area_entered" from="enemy_1_modified_hit" to="." method="_on_enemy_1_modified_hit_area_entered"]


